force-app/main/default/objects/Order__c/fields/Account_Wholesaler_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Account_Wholesaler_Indirect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Wholesaler__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Account_Wholesaler__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Wholesaler__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>