force-app/main/default/objects/Order__c/fields/Banner_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Banner_Partner_Name__c</fullName>
    <formula>Wholesalers__r.Banner_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banner Partner Name</label>
    <type>Text</type>
</CustomField>