force-app/main/default/objects/Order__c/fields/Banner_Partner_SafeID__c.field-meta.xml
<CustomField>
    <fullName>Banner_Partner_SafeID__c</fullName>
    <formula>CASESAFEID( Wholesalers__r.Banner_Partner__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banner Partner SafeID</label>
    <type>Text</type>
</CustomField>