force-app/main/default/objects/Order__c/fields/Bonus_Cartons__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Cartons__c</fullName>
    <description>Bonus Cartons</description>
    <label>Bonus Cartons</label>
    <summarizedField>Order_Item__c.Carton_Bonus__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>