force-app/main/default/objects/Order__c/fields/Bonus_Unit__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Unit__c</fullName>
    <description>Bonus Unit</description>
    <inlineHelpText>Bonus Unit</inlineHelpText>
    <label>Bonus Unit</label>
    <summarizedField>Order_Item__c.Unit_Bonus__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>