force-app/main/default/objects/Order__c/fields/CallCard__c.field-meta.xml
<CustomField>
    <fullName>CallCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Card</label>
    <referenceTo>CallCard__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>