force-app/main/default/objects/Order__c/fields/City_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>City_ShipTo__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>