force-app/main/default/objects/Order__c/fields/CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Name__c</fullName>
    <formula>CreatedBy.FirstName  + &#39; &#39; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedBy Name</label>
    <type>Text</type>
</CustomField>