force-app/main/default/objects/Order__c/fields/CS_Comments__c.field-meta.xml
<CustomField>
    <fullName>CS_Comments__c</fullName>
    <label>CS Comments</label>
    <type>TextArea</type>
</CustomField>