force-app/main/default/objects/Order__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <description>Delivery instructions that will be sent to the wholesaler.</description>
    <inlineHelpText>Delivery Instructions Only.  These will be sent to the wholesaler.</inlineHelpText>
    <label>Delivery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>