force-app/main/default/objects/Order__c/fields/Is_Flagged_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Flagged_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a discount is enterred on that is greater than the tolerance, or if there is bonus stock, this field will be checked so that it can go through an approval process before it gets sent to the wholesaler.</description>
    <label>Is Flagged for Approval</label>
    <type>Checkbox</type>
</CustomField>