force-app/main/default/objects/Order__c/fields/LMAA_Number__c.field-meta.xml
<CustomField>
    <fullName>LMAA_Number__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.LMAA_Number__c</formula>
    <label>LMAA Number</label>
    <type>Text</type>
</CustomField>