force-app/main/default/objects/Order__c/fields/Market_Id__c.field-meta.xml
<CustomField>
    <fullName>Market_Id__c</fullName>
    <formula>Account__r.Market__r.Id</formula>
    <label>Market Id</label>
    <type>Text</type>
</CustomField>