force-app/main/default/objects/Order__c/fields/Material_Errors__c.field-meta.xml
<CustomField>
    <fullName>Material_Errors__c</fullName>
    <description>Tracks how many material errors are in the Order</description>
    <label>Material Errors</label>
    <summarizedField>Order_Item__c.Missing_Material__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>