force-app/main/default/objects/Order__c/fields/National_Management_Group__c.field-meta.xml
<CustomField>
    <fullName>National_Management_Group__c</fullName>
    <formula>CASESAFEID(Wholesalers__r.Banner_Partner__r.National_Management_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Management Group</label>
    <type>Text</type>
</CustomField>