force-app/main/default/objects/Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Order with notes will send the order to customer service for review and will not be sent to the wholesaler automatically</description>
    <inlineHelpText>Customer Service Instructions</inlineHelpText>
    <label>Notes:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>