force-app/main/default/objects/Order__c/fields/Number_of_LineItems__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LineItems__c</fullName>
    <label>Number of LineItems</label>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>