force-app/main/default/objects/Order__c/fields/Order_Processed__c.field-meta.xml
<CustomField>
    <fullName>Order_Processed__c</fullName>
    <description>Order Processed (Time Stamp)</description>
    <inlineHelpText>Order Processed (Time Stamp)</inlineHelpText>
    <label>Order Processed (Time Stamp)</label>
    <type>DateTime</type>
</CustomField>