force-app/main/default/objects/Order__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <formula>RIGHT(Name,LEN(Name)-4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderNumber</label>
    <type>Text</type>
</CustomField>