force-app/main/default/objects/Order__c/fields/Postal_Code_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_ShipTo__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>