force-app/main/default/objects/Order__c/fields/Price_Override_Processed_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_Processed_Time_Stamp__c</fullName>
    <description>Price Override Processed (Time Stamp)</description>
    <inlineHelpText>Price Override Processed (Time Stamp)</inlineHelpText>
    <label>Price Override (Time Stamp)</label>
    <type>DateTime</type>
</CustomField>