force-app/main/default/objects/Order__c/fields/Price_Override_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_Relevant__c</fullName>
    <description>If threre is any discount on the Order flag the Order as Price Override Relevant = True</description>
    <formula>IF(OR(Bonus_Cartons__c &gt; 1, Bonus_Unit__c &gt; 1, Total_Discount__c &gt;1), &#39;True&#39;, &#39;False&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Override Relevant</label>
    <type>Text</type>
</CustomField>