force-app/main/default/objects/Order__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <formula>Account__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Name</label>
    <type>Text</type>
</CustomField>