force-app/main/default/objects/Order__c/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Customer Number</label>
    <type>Text</type>
</CustomField>