force-app/main/default/objects/Order__c/fields/SF_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>SF_Autonumber__c</fullName>
    <formula>Account__r.SF_Account_Number__c</formula>
    <label>SF Autonumber</label>
    <type>Text</type>
</CustomField>