force-app/main/default/objects/Order__c/fields/State_account__c.field-meta.xml
<CustomField>
    <fullName>State_account__c</fullName>
    <formula>Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>