force-app/main/default/objects/Order__c/fields/State_Management_Group__c.field-meta.xml
<CustomField>
    <fullName>State_Management_Group__c</fullName>
    <formula>CASESAFEID(Wholesalers__r.Banner_Partner__r.State_Management_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Management Group</label>
    <type>Text</type>
</CustomField>