force-app/main/default/objects/Order__c/fields/State_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>State_ShipTo__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>