force-app/main/default/objects/Order__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>