force-app/main/default/objects/Order__c/fields/Street_del__c.field-meta.xml
<CustomField>
    <fullName>Street_del__c</fullName>
    <formula>Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>