force-app/main/default/objects/Order__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <formula>Account__r.Shipping_Suburb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suburb</label>
    <type>Text</type>
</CustomField>