force-app/main/default/objects/Order__c/fields/Total_9L_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_9L_Cases__c</fullName>
    <description>Total 9L Cases</description>
    <label>Total 9L Cases</label>
    <summarizedField>Order_Item__c.X9L_Cases2__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>