force-app/main/default/objects/Order__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <description>Rolled up from Total Cases on Order Item</description>
    <label>Total Cases</label>
    <summarizedField>Order_Item__c.Total_Cases__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>