force-app/main/default/objects/Order__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description>Total Discount</description>
    <inlineHelpText>Total Discount</inlineHelpText>
    <label>Total Discount</label>
    <summarizedField>Order_Item__c.Discount__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>