force-app/main/default/objects/Order__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <summarizedField>Order_Item__c.Unit__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>