force-app/main/default/objects/Order__c/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wholesaler</description>
    <label>Wholesaler</label>
    <referenceTo>Wholesaler__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>