force-app/main/default/objects/Order__c/fields/Wholesaler_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Account_Name__c</fullName>
    <formula>Wholesalers__r.Wholesaler_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Customer Name</label>
    <type>Text</type>
</CustomField>