force-app/main/default/objects/Order__c/fields/Wholesaler_ACN__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_ACN__c</fullName>
    <formula>Wholesalers__r.Wholesaler__r.ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler ACN</label>
    <type>Text</type>
</CustomField>