force-app/main/default/objects/Order__c/fields/Wholesaler_Code__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Code__c</fullName>
    <description>This field is need for the trigger</description>
    <formula>Wholesalers__r.Wholesaler__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is need for the trigger</inlineHelpText>
    <label>Wholesaler_Code</label>
    <type>Text</type>
</CustomField>