force-app/main/default/objects/Order__c/fields/Wholesaler_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Customer_Name__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Customer Name</label>
    <type>Text</type>
</CustomField>