force-app/main/default/objects/Order__c/fields/Wholesaler_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Customer_Number__c</fullName>
    <description>This is the &quot;Customer&quot; number that will be sent to the Wholesaler.</description>
    <formula>Wholesalers__r.Wholesaler_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the &quot;Customer&quot; number that will be sent to the Wholesaler.</inlineHelpText>
    <label>Wholesaler Customer Number</label>
    <type>Text</type>
</CustomField>