force-app/main/default/objects/Order__c/fields/Wholesaler_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_E_mail__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler E-mail</label>
    <type>Text</type>
</CustomField>