force-app/main/default/objects/Order__c/fields/Wholesaler_Email__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Email__c</fullName>
    <formula>Wholesalers__r.Wholesaler__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Email</label>
    <type>Text</type>
</CustomField>