force-app/main/default/objects/Order__c/fields/Wholesaler_Fax__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Fax__c</fullName>
    <formula>Wholesalers__r.Wholesaler__r.Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Fax</label>
    <type>Text</type>
</CustomField>