force-app/main/default/objects/Order__c/fields/Wholesaler_Number__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Number__c</fullName>
    <description>This is the ECC Retail Account Number</description>
    <formula>Wholesalers__r.Wholesaler__r.SAP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the ECC Retail Account Number</inlineHelpText>
    <label>Wholesaler Number (ECC)</label>
    <type>Text</type>
</CustomField>