force-app/main/default/objects/Order__c/fields/Wholesaler_Number_SAP__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Number_SAP__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.SAP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Number (SAP)</label>
    <type>Text</type>
</CustomField>