force-app/main/default/objects/Order__c/fields/Wholesaler_Phone_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Phone_ShipTo__c</fullName>
    <formula>Account_Wholesaler_Indirect__r.Wholesaler__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Phone</label>
    <type>Text</type>
</CustomField>