force-app/main/default/objects/Order__c/fields/Wholesaler_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Secondary_Email__c</fullName>
    <formula>Wholesalers__r.Wholesaler__r.Secondary_Email__c</formula>
    <label>Wholesaler Secondary Email</label>
    <type>Text</type>
</CustomField>