force-app/main/default/objects/Order__c/fields/Wholesaler_SendTo_Email__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_SendTo_Email__c</fullName>
    <description>If there is any Bonus stock or discount&#39;s on the order then we need to use the Wholesaler&#39;s Secondary Email</description>
    <label>Wholesaler SendTo Email</label>
    <type>Email</type>
</CustomField>