force-app/main/default/objects/Order__c/fields/Wholesaler_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_State_Code__c</fullName>
    <formula>Wholesalers__r.Wholesaler__r.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler State Code</label>
    <type>Text</type>
</CustomField>