force-app/main/default/objects/Order__c/fields/Wholesaler_Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Transmission_Type__c</fullName>
    <formula>TEXT(Wholesalers__r.Wholesaler__r.Distributor_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Transmission Type</label>
    <type>Text</type>
</CustomField>