force-app/main/default/objects/Order__c/fields/Wholesaler_Type__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Type__c</fullName>
    <formula>text( Wholesalers__r.Wholesaler__r.Distributor_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Transmission</label>
    <type>Text</type>
</CustomField>