force-app/main/default/objects/Order__c/fields/Wholesalers__c.field-meta.xml
<CustomField>
    <fullName>Wholesalers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler - Look Up</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Wholesaler__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Try string search Wh*</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Wholesaler__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>