force-app/main/default/objects/Order__c/recordTypes/Locked_Direct.recordType-meta.xml
<RecordType>
    <fullName>Locked_Direct</fullName>
    <active>true</active>
    <label>Locked - Direct</label>
</RecordType>