force-app/main/default/objects/Order__c/recordTypes/Locked_Indirect.recordType-meta.xml
<RecordType>
    <fullName>Locked_Indirect</fullName>
    <active>true</active>
    <label>Locked - Indirect</label>
</RecordType>