force-app/main/default/objects/Order__c/recordTypes/New_Direct_Order.recordType-meta.xml
<RecordType>
    <fullName>New_Direct_Order</fullName>
    <active>true</active>
    <label>New Direct Order</label>
</RecordType>