force-app/main/default/objects/Order__c/recordTypes/New_InDirect_Order.recordType-meta.xml
<RecordType>
    <fullName>New_InDirect_Order</fullName>
    <active>true</active>
    <label>New InDirect Order</label>
</RecordType>