force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CreatedBy_Name__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Material_Errors__c</columns>
    <columns>Status__c</columns>
    <columns>Wholesaler_Type__c</columns>
    <columns>Order_Processed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Channel__c</field>
        <operation>equals</operation>
        <value>off</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>