force-app/main/default/objects/Order__c/listViews/ALM.listView-meta.xml
<ListView>
    <fullName>ALM</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Wholesaler_Transmission_Type__c</columns>
    <columns>Material_Errors__c</columns>
    <columns>State__c</columns>
    <columns>Wholesaler_Customer_Number__c</columns>
    <columns>Order_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Wholesaler_Transmission_Type__c</field>
        <operation>equals</operation>
        <value>ALM</value>
    </filters>
    <label>ALM</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>AUDMarketManagerAdmin</roleAndSubordinates>
    </sharedTo>
</ListView>