force-app/main/default/objects/Order__c/listViews/HLW.listView-meta.xml
<ListView>
    <fullName>HLW</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CreatedBy_Name__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Material_Errors__c</columns>
    <columns>Status__c</columns>
    <columns>Wholesaler_Type__c</columns>
    <columns>Order_Processed__c</columns>
    <columns>Wholesaler_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Wholesaler_Transmission_Type__c</field>
        <operation>equals</operation>
        <value>HLW</value>
    </filters>
    <label>HLW</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>AUDMarketManagerAdmin</roleAndSubordinates>
    </sharedTo>
</ListView>