force-app/main/default/objects/Order__c/listViews/ILG.listView-meta.xml
<ListView>
    <fullName>ILG</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CreatedBy_Name__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Material_Errors__c</columns>
    <columns>Status__c</columns>
    <columns>Wholesaler_Type__c</columns>
    <columns>Order_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Wholesaler_Transmission_Type__c</field>
        <operation>equals</operation>
        <value>ILG</value>
    </filters>
    <label>ILG</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>AUDMarketManagerAdmin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>